// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseToast should render different actions 1`] = `
"<div class=\\"toast-container \\"><div class=\\"toast  \\"><div class=\\"message\\">hello</div><div class=\\"action\\"><button type=\\"button\\" class=\\"btn  \\"><div class=\\"text \\">remove</div><style>
        .tag,
        .btn {
          box-sizing: border-box;
          display: inline-block;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 2px;
          font-weight: bold;
          font-size: .75rem;
          user-select: none;
          outline: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
            border 200ms ease 0ms, color 200ms ease 0ms;
          position: relative;
          overflow: hidden;
          color: #282d30;
          background-color: #fff;
          border: 2px solid #282d30;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          --zeit-ui-button-padding: 0.625rem;
          --zeit-ui-button-height: 1.5rem;
          --zeit-ui-button-color: #282d30;
          --zeit-ui-button-bg: #fff;
        }

        .tag:hover,
        .btn:hover {
          color: #282d30;
          --zeit-ui-button-color: #282d30;
          background-color: #fff;
          border-color: #282d30;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          transform: translate3d(0px, 0px, 0px);
        }

        .tag.active,
        .tag:active,
        .btn:active {
          color: #282d30;
          --zeit-ui-button-color: #282d30;
          background-color: #fff;
          border-color: #282d30;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          transform: translate3d(0px, 0px, 0px);
        }

        .tag :global(.text),
        .btn :global(.text) {
          position: relative;
          z-index: 1;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          top: -2px;
        }

        .tag :global(.text p),
        .tag :global(.text pre),
        .tag :global(.text div),
        .btn :global(.text p),
        .btn :global(.text pre),
        .btn :global(.text div) {
          margin: 0;
        }
        .tag :global(.hidden),
        .btn :global(.hidden) {
          visibility: hidden;
        }
      </style></button><button type=\\"button\\" class=\\"btn  \\"><div class=\\"text \\">remove</div><style>
        .tag,
        .btn {
          box-sizing: border-box;
          display: inline-block;
          padding: 0 0.625rem;
          height: 1.5rem;
          line-height: 1.5rem;
          min-width: min-content;
          width: auto;
          border-radius: 2px;
          font-weight: bold;
          font-size: .75rem;
          user-select: none;
          outline: none;
          text-transform: capitalize;
          justify-content: center;
          text-align: center;
          white-space: nowrap;
          transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
            border 200ms ease 0ms, color 200ms ease 0ms;
          position: relative;
          overflow: hidden;
          color: #444;
          background-color: #fff;
          border: 2px solid #ebeced;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          --zeit-ui-button-padding: 0.625rem;
          --zeit-ui-button-height: 1.5rem;
          --zeit-ui-button-color: #444;
          --zeit-ui-button-bg: #fff;
        }

        .tag:hover,
        .btn:hover {
          color: #444;
          --zeit-ui-button-color: #444;
          background-color: #fff;
          border-color: #aaafbb;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          transform: translate3d(0px, 0px, 0px);
        }

        .tag.active,
        .tag:active,
        .btn:active {
          color: #444;
          --zeit-ui-button-color: #444;
          background-color: #fff;
          border-color: #9b9eac;
          cursor: pointer;
          pointer-events: auto;
          box-shadow: none;
          transform: translate3d(0px, 0px, 0px);
        }

        .tag :global(.text),
        .btn :global(.text) {
          position: relative;
          z-index: 1;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          line-height: inherit;
          top: -2px;
        }

        .tag :global(.text p),
        .tag :global(.text pre),
        .tag :global(.text div),
        .btn :global(.text p),
        .btn :global(.text pre),
        .btn :global(.text div) {
          margin: 0;
        }
        .tag :global(.hidden),
        .btn :global(.hidden) {
          visibility: hidden;
        }
      </style></button></div><style>
        .toast {
          width: 420px;
          max-width: 90vw;
          max-height: 75px;
          display: flex;
          justify-content: space-between;
          align-items: center;
          color: #000;
          background-color: #fff;
          color: #000;
          border: 0;
          border-radius: 4px;
          padding: 16px;
          position: absolute;
          bottom: 0;
          right: 0;
          opacity: 1;
          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
          transform: translate3d(0, 100%, 0px) scale(1);
          transition: transform 400ms ease 0ms, visibility 200ms ease 0ms, opacity 200ms ease 0ms;
        }

        .toast.visible {
          opacity: 1;
          transform: translate3d(0, calc(100% + -75px + -0px), -0px) scale(1);
        }

        .toast.hide {
          opacity: 0;
          visibility: hidden;
          pointer-events: none;
        }

        .message {
          align-items: center;
          height: 100%;
          transition: opacity 0.4s ease;
          font-size: 0.875rem;
          display: -webkit-box;
          word-break: break-all;
          padding-right: 8px;
          overflow: hidden;
          max-height: 100%;
          text-overflow: ellipsis;
          -webkit-box-orient: vertical;
          -webkit-line-clamp: 2;
          line-height: 1.1rem;
        }

        .toast :global(button + button) {
          margin-left: 4px;
        }
      </style></div><style>
        .toast-container {
          position: fixed;
          width: 420px;
          max-width: 90vw;
          bottom: 16px;
          right: 16px;
          z-index: 2000;
          transition: all 400ms ease;
          box-sizing: border-box;
        }

        .toast-container.hover {
          transform: translate3d(0, -10px, 0);
        }
      </style></div>"
`;

exports[`UseToast should work with different types 1`] = `
"<div class=\\"toast-container \\"><div class=\\"toast visible \\"><div class=\\"message\\">hello</div><div class=\\"action\\"></div><style>
        .toast {
          width: 420px;
          max-width: 90vw;
          max-height: 75px;
          display: flex;
          justify-content: space-between;
          align-items: center;
          color: #000;
          background-color: #7cd77b;
          color: white;
          border: 0;
          border-radius: 4px;
          padding: 16px;
          position: absolute;
          bottom: 0;
          right: 0;
          opacity: 1;
          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
          transform: translate3d(0, 100%, 0px) scale(1);
          transition: transform 400ms ease 0ms, visibility 200ms ease 0ms, opacity 200ms ease 0ms;
        }

        .toast.visible {
          opacity: 1;
          transform: translate3d(0, calc(100% + -75px + -0px), -0px) scale(1);
        }

        .toast.hide {
          opacity: 0;
          visibility: hidden;
          pointer-events: none;
        }

        .message {
          align-items: center;
          height: 100%;
          transition: opacity 0.4s ease;
          font-size: 0.875rem;
          display: -webkit-box;
          word-break: break-all;
          padding-right: 8px;
          overflow: hidden;
          max-height: 100%;
          text-overflow: ellipsis;
          -webkit-box-orient: vertical;
          -webkit-line-clamp: 2;
          line-height: 1.1rem;
        }

        .toast :global(button + button) {
          margin-left: 4px;
        }
      </style></div><style>
        .toast-container {
          position: fixed;
          width: 420px;
          max-width: 90vw;
          bottom: 16px;
          right: 16px;
          z-index: 2000;
          transition: all 400ms ease;
          box-sizing: border-box;
        }

        .toast-container.hover {
          transform: translate3d(0, -10px, 0);
        }
      </style></div>"
`;
